--- a/.htaccess
+++ b/.htaccess
@@ -25,15 +25,23 @@ ExpiresByType image/jpeg "access plus 1 year"
 ExpiresByType image/x-icon "access plus 1 year"
 ExpiresByType font/woff2 "access plus 1 year"
 ExpiresByType font/woff "access plus 1 year"
+ExpiresByType font/ttf "access plus 1 year"
 ExpiresByType application/font-woff2 "access plus 1 year"
 ExpiresByType application/font-woff "access plus 1 year"
+ExpiresByType application/x-font-ttf "access plus 1 year"
+ExpiresByType application/octet-stream "access plus 1 year"
 </IfModule>
 
 <IfModule mod_headers.c>
+AddType image/webp .webp
+AddType font/woff .woff
+AddType font/woff2 .woff2
+AddType font/ttf .ttf
+
 <FilesMatch "\.(css|js|webp|svg|png|jpe?g|ico|woff2?|ttf)$">
-Header set Cache-Control "public, max-age=31536000, immutable"
+Header always set Cache-Control "public, max-age=31536000, immutable"
 </FilesMatch>
 <FilesMatch "\.(html|htm|php)$">
-Header set Cache-Control "no-cache, no-store, must-revalidate"
+Header always set Cache-Control "no-cache, no-store, must-revalidate"
 </FilesMatch>
 </IfModule>
